# cloudy-neigh

./: .bazelrc  .golangci.yaml  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  nogo_config.json
.claude/: CLAUDE.md
.claude/skills/babysit-prs/: SKILL.md
.github/workflows/: ci.yaml  quality.yaml
benchmark/: benckmark_test.go
cmd/pebble/: BUILD.bazel  main.go
docs/design/: blob-cas-atomic-store.html
docs/logo/: README.md
experimental/cmd/bleve-indexer/: BUILD.bazel  bleve-indexer.go
experimental/cmd/bleve-search/: BUILD.bazel
experimental/cmd/bleve-vector-search/: BUILD.bazel
experimental/cmd/bluge-indexer/: bluge-indexer.go
experimental/cmd/bluge-search/: bluge-search.go
experimental/cmd/bluge-vector-search/: bluge-vector-search.go
experimentals/bleve/indexer/: BUILD.bazel
experimentals/bleve/search/: BUILD.bazel  search.go
experimentals/bleve/vector-search/: BUILD.bazel  vector-search.go
experimentals/openai/: BUILD.bazel  openai.go
lsh/: lsh.go
openai/: openai.go
tools/format/: BUILD.bazel
