module(
    name = "cloudy-neigh",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.61.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.51.3", repo_name = "bazel_gazelle")

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.3", dev_dependency = True)

# Go SDK toolchain.
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.5")

# Wire nogo static analysis into every Go compile action.
go_sdk.nogo(nogo = "//:nogo")

# External Go dependencies, sourced directly from go.mod / go.sum.
# Run `bazel mod tidy` to keep the use_repo list below in sync.
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_blugelabs_bluge", "com_github_cockroachdb_pebble", "com_github_fatih_color")
