load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pebble_lib",
    srcs = ["main.go"],
    importpath = "github.com/iampat/cloudy-neigh/cmd/pebble",
    visibility = ["//visibility:private"],
    deps = ["@com_github_cockroachdb_pebble_v2//:pebble"],
)

go_binary(
    name = "pebble",
    embed = [":pebble_lib"],
    visibility = ["//visibility:public"],
)
