load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "openai_lib",
    srcs = ["openai.go"],
    importpath = "github.com/iampat/cloudy-neigh/experimentals/openai",
    visibility = ["//visibility:private"],
    deps = [
        "//document",
        "//lsh",
        "//openai",
    ],
)

go_binary(
    name = "openai",
    embed = [":openai_lib"],
    visibility = ["//visibility:public"],
)
