load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bleve-search_lib",
    srcs = ["bleve-search.go"],
    importpath = "github.com/iampat/cloudy-neigh/experimental/cmd/bleve-search",
    visibility = ["//visibility:private"],
    deps = [
        "//lsh",
        "//openai",
        "@com_github_blevesearch_bleve_v2//:bleve",
        "@com_github_blevesearch_bleve_v2//search/query",
        "@com_github_fatih_color//:color",
    ],
)

go_binary(
    name = "bleve-search",
    embed = [":bleve-search_lib"],
    visibility = ["//visibility:public"],
)
