load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bleve-vector-search_lib",
    srcs = ["bleve-vector-search.go"],
    importpath = "github.com/iampat/cloudy-neigh/experimental/cmd/bleve-vector-search",
    visibility = ["//visibility:private"],
    deps = ["@com_github_blevesearch_bleve_v2//:bleve"],
)

go_binary(
    name = "bleve-vector-search",
    embed = [":bleve-vector-search_lib"],
    visibility = ["//visibility:public"],
)
