load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "vector-search_lib",
    srcs = ["vector-search.go"],
    importpath = "github.com/iampat/cloudy-neigh/experimentals/bleve/vector-search",
    visibility = ["//visibility:private"],
    deps = ["@com_github_blevesearch_bleve_v2//:bleve"],
)

go_binary(
    name = "vector-search",
    embed = [":vector-search_lib"],
    visibility = ["//visibility:public"],
)
